細かい変更

--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -508,11 +508,11 @@
       <h3 class="title4">サイト</h3>
         <select class="site" name="item">
             <option value="" >指定しない</option>
-            <option value="0" >BGMer</option>
-            <option value="1" >DOVA-SYNDROME</option>
-            <option value="2" >甘茶の音楽工房</option>
-            <option value="3" >MusMus</option>
-            <option value="4" >SHW</option>
+            <option value="1" >DOVA</option>
+            <option value="2" >BGMer</option>
+            <option value="3" >甘茶の音楽工房</option>
+            <option value="4" >MusMus</option>
+            <option value="5" >SHW</option>
         </select>
         
     
