リンクの設定ができていないとこがあったため追加しました

--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -444,7 +444,7 @@
 <body>
   <ul class="topnav">
     <li>
-      <a class="left" href="#"><h2>　MUSIC REEF</h2></a>
+      <a class="left" href="{{url_for('user_top')}}"><h2>　MUSIC REEF</h2></a>
     </li>
     <li class="right">
       <a
