利用者トップ画面の音源詳細表示と、faviconの設定をした

--- a/templates/about_the_site.html
+++ b/templates/about_the_site.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{{url_for('static', filename='/css/aboutSite.css')}}"/>
+    <link
+      rel="stylesheet"
+      href="{{url_for('static', filename='/css/aboutSite.css')}}"
+    />
+    <link
+      rel="icon"
+      href="{{url_for('static', filename='favicon/mrロゴ.ico')}}"
+    />
     <title>MusicReefについて</title>
   </head>
   <body>
@@ -24,24 +31,30 @@
     </ul>
     <h1 class="MusicReefText">　　MusicReefについて</h1>
     <div class="text1">
-      <p>MusicReefは学生4人で卒業研究にあたって作成したWebアプリケーションとなります。
-      本サイトはフリー音源配布サイトの音源をまとめた”フリー音源まとめサイト”となります。利用規約
-      にあたっては各サイトの規約に従ってください。</p><br>
+      <p>
+        MusicReefは学生4人で卒業研究にあたって作成したWebアプリケーションとなります。
+        本サイトはフリー音源配布サイトの音源をまとめた”フリー音源まとめサイト”となります。利用規約
+        にあたっては各サイトの規約に従ってください。
+      </p>
+      <br />
     </div>
     <h1 class="MusicReefText">　　使い方について</h1>
     <div class="text2">
-      <p>検索フォームに探したい楽曲のジャンル・楽曲名・雰囲気・楽器名・用途、等を入力
+      <p>
+        検索フォームに探したい楽曲のジャンル・楽曲名・雰囲気・楽器名・用途、等を入力
         （複数入力する場合はスペースを空ける）し、楽曲を検索後ダウンロードというリンクをクリック
         していただくと各サイトのダウンロードページに遷移します。また、コメントの投稿や評価を行う
         ことも可能となっています、ただし悪質なコメント等を発見した場合は削除を行います。
-      </p><br>
+      </p>
+      <br />
     </div>
     <h1 class="MusicReefText">　　お問い合わせについて</h1>
     <div class="text2">
-      <p>お問い合わせに関しましてはこちらのメールアドレスにお願いします。【musicreef820@gmail.com】
-      </p><br>
+      <p>
+        お問い合わせに関しましてはこちらのメールアドレスにお願いします。【musicreef820@gmail.com】
+      </p>
+      <br />
     </div>
-    
 
     <br /><br /><br /><br /><br /><br /><br /><br /><br />
     <div class="footer04">
