--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -7,7 +7,10 @@
     href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
     rel="stylesheet"
   />
-
+  <link
+  rel="icon"
+  href="{{url_for('static', filename='favicon/mrロゴ.ico')}}"
+/>
   <title>利用者トップ</title>
   <style>
     .search-box select {
