--- a/templates/user_top.html
+++ b/templates/user_top.html
@@ -465,7 +465,7 @@
               評価 {% if average_ratings and music[0] in average_ratings %}
               <span>{{ average_ratings[music[0]] | round(1) }}/5</span>
               {% else %}
-              <span>N/A</span>
+              <span>-/5</span>
               {% endif %}
             </a>
             <div class="download-action">
@@ -584,7 +584,7 @@
                 評価 {% if average_ratings and music[0] in average_ratings %}
                 <span>{{ average_ratings[music[0]] | round(1) }}/5</span>
                 {% else %}
-                <span>N/A</span>
+                <span>-/5</span>
                 {% endif %}
               </a>
               <div class="download-action">
