--- a/templates/top_page.html
+++ b/templates/top_page.html
@@ -588,7 +588,7 @@
                 {% if average_ratings and music[0] in average_ratings %}
                   <span>{{ average_ratings[music[0]] | round(1) }}/5</span>
                 {% else %}
-                  <span>N/A</span>
+                  <span>-/5</span>
                 {% endif %}
               </a>
               <a class="download-action">
