--- a/static/css/search_top.css
+++ b/static/css/search_top.css
@@ -213,6 +213,7 @@
   .music-details-container .details-box {
     background: white;
     padding: 110px;
+    width: 400px;
     max-width: 100%;
     max-height: 100%;
     overflow: auto;
